Closed Bug 896018 Opened 12 years ago Closed 12 years ago

jscntxtinlines.h:33:23: warning: private field 'context' is not used [-Wunused-private-field]

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building with clang, I get this build warning: { js/src/jscntxtinlines.h:33:23: warning: private field 'context' is not used [-Wunused-private-field] } Looks like the last usage of this field was removed last week, here: http://hg.mozilla.org/mozilla-central/diff/b674f0e40c8e/js/src/jscntxtinlines.h#l1.38 > - if (c && c != context->runtime()->atomsCompartment) { > + if (c && c != compartment->rt->atomsCompartment) {
Assignee: general → dholbert
Status: NEW → ASSIGNED
Attachment #778629 - Flags: review?(bhackett1024)
Attachment #778629 - Flags: review?(bhackett1024) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: