Bug 896018 - Remove unused field 'context' from CompartmentChecker. r=bhackett