js/src/jscntxtinlines.h
@@ -31,12 +31,11 @@ namespace js {
 #ifdef JS_CRASH_DIAGNOSTICS
 class CompartmentChecker
 {
-    ExclusiveContext *context;
     JSCompartment *compartment;
 
   public:
     explicit CompartmentChecker(ExclusiveContext *cx)
-      : context(cx), compartment(cx->compartment_)
+      : compartment(cx->compartment_)
     {}
 
     /*
